referred to a wrong mp3 file in one instance

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h4>Laglína</h4>
                     <br>
                     <audio controls style="width: 100%" loop="loop">
-                        <source src="assets/mai-sopran.mp3" type="audio/mpeg">
+                        <source src="assets/mai.mp3" type="audio/mpeg">
                         Vafrinn þinn styður ekki HTML mp3.
                     </audio>
                     <br><br>
