lagaði stafsetningarvillu i nafni

--- a/hafjollin.html
+++ b/hafjollin.html
@@ -44,7 +44,7 @@
                 <div class="jumbotron" style="margin-top: 20px">
                     <h1>Þar sem háfjöllin heilög rísa</h1>
                     <hr>
-                    <h3>Greining á ljóðinu eftir Nönnu Katrínu Hannesardóttur</h3>
+                    <h3>Greining á ljóðinu eftir Nönnu Katrínu Hannesdóttur</h3>
                     <br>
                     <p>
                         Ljóðið er úr <i>Vefaranum mikla frá Kasmír</i> sem kom út 1927, þegar Halldór var 25 ára. Þetta
