--- a/hafjollin.html
+++ b/hafjollin.html
@@ -38,6 +38,13 @@
                             <li class="nav-item active">
                                 <p class="nav-link" style="margin-bottom:0">Þar sem háfjöllin heilög rísa</p>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="./bradum.html">Bráðum kemur betri tíð</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./hvertspor.html">Hvert örstutt spor</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
