--- a/index.html
+++ b/index.html
@@ -32,12 +32,20 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <p class="nav-link" style="margin-bottom:0">Maístjarnan</p>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./hafjollin.html">Þar sem háfjöllin heilög rísa</a>
-                            </li>
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <p class="nav-link" style="margin-bottom:0">Maístjarnan</p>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./hafjollin.html">Þar sem háfjöllin heilög rísa</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./bradum.html">Bráðum kemur betri tíð</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./hvertspor.html">Hvert örstutt spor</a>
+                                </li>
+                            </ul>
                         </ul>
                     </div>
                 </nav>
@@ -184,6 +192,133 @@
                         þessa framtíðarlands.<br>
                         <br>
                         Jón Ásgeirsson / Halldór K. Laxness</p>
+                    <hr>
+                    <h3>Analysis by Nanna Katrín Hannesdóttir</h3>
+                    <br>
+                    <p>
+                        Warning: this is about love.
+                        <br><br>
+                        The poem Maístjarnan by Halldór Laxness in combination with Jón Ásgeirsson‘s song should be well
+                        known to most. It‘s apparent political message and fighting spirit have made it somewhat of an
+                        anthem for the labor class‘s struggle for equality in Iceland. However, on reading the Laxness
+                        novel it is in, I discovered that Maístjarnan is actually, at it‘s core, a love song more than
+                        anything else. This I wanted to share with you.
+                        <br><br>
+                        The poem Maístjarnan is from the novel Heimsljós or world-light which was released in 1937-38
+                        (originaly in two or more volumes).
+                        <br><br>
+                        It is about the search for light and beauty in extremely harsh conditions. The main character is
+                        the poet, Ólafur Kárason, and the book is his life‘s story. Ólafur also has an extra name
+                        „ljósvíkingur“ or light-viking.
+                        <br><br>
+                        Despite being called light-viking, Ólafur is no soldier in the traditional sense. In fact, quite
+                        the opposite. He hates all conflict and has within him the strongest will to constantly please
+                        others. This often gets him into trouble. Things are always „just happening“ to him, totally by
+                        accident.
+                        <br><br>
+                        In the part where Maístjarnan is, for example, Ólafur finds himself „by accident“ engaged to a
+                        woman he does not like at all. They have all of a sudden been together five years and life is a
+                        constant struggle. They are extremely poor, have had two children- one who died and one who is
+                        sick-to die. The reader gets the feeling that Ólafur is in a self-made prison because no matter
+                        how much he wants it deep inside, he would never have the guts to leave this woman.
+                        <br><br>
+                        But in the prelude to Maístjarnan some winds of change have started to blow. There is turbulance
+                        in the small town where they live. Workers have started to think about demanding better wages
+                        and a labor union is being formed for the first time.
+                        <br><br>
+                        Our Ólafur runs into the emerging labor union‘s first meeting (accidently though, ofcourse) and
+                        meets a young woman, Jóa, who has just moved to town. They talk and instantly have a connection
+                        and Ólafur feels sparks of infatuation for the first time in a long time. Jóa and Óli bond
+                        through shared dreams and she says to him „it is strange to hear from someone else, your own
+                        most beautiful thoughts“. And so another sort of turbulance starts, in Ólafur Kárasons personal
+                        life.
+                        <br><br>
+                        Despite their deep connection Óli and Jóa have a hard time getting on the same page. He is,
+                        ofcourse, enganged and not willing to threaten the fragile peace of his household. Jóa means
+                        trouble, and Ólafur does not want any drama so he often tries to just avoid her. When they do
+                        meet they don‘t even understand each other so well for they are very different. Jóa is very
+                        passionate and political and active in the class struggles going on- a true fighter. She is
+                        always asking Ólafur to take a stance, is he for or against the labor union? Ólafur, however, is
+                        a dreamer and he prefers not to get too involved in the toil of the real world. He refuses as he
+                        can to take a stance in the debate and just wants to keep the peace.
+                        <br><br>
+                        That is up until the day that Maístjarnan was written. Then there is a big demonstration. Ólafur
+                        is in the crowd and looks up at Jóa who is standing on a stage with the speakers. At this point
+                        all his shields of indifference go down and he describes how he „suddenly he sees her completely
+                        as she is“-And she is, in his eyes, the Living image of freedom. He falls completely in love
+                        with her and comes home a changed man. He has gotten a spark of hope that his life could change
+                        for the better. He sees Jóa as his gateway to freedom, his savior.
+                        <br><br>
+                        While laying in bed that night he sees one small star in the sky. He feels the star comes down
+                        to meet him and hears a song forming in his heart a song about her, the girl he calls the Living
+                        image of freedom. And we have Maístjarnan:
+
+                    </p>
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <p class="card-text">
+                                Ó hve létt er þitt skóhljóð<br>
+                                ó hve leingi ég beið þín,<br>
+                                það er vorhret á glugga,<br>
+                                napur vindur sem hvín,<br>
+                                en ég veit eina stjörnu,<br>
+                                eina stjörnu sem skín,<br>
+                                og nú loks ertu komin,<br>
+                                þú ert komin til mín.<br>
+                                <br>
+                                Það eru erfiðir tímar,<br>
+                                það er atvinnuþref,<br>
+                                ég hef ekkert að bjóða,<br>
+                                ekki ögn sem ég gef,<br>
+                                nema von mína og líf mitt<br>
+                                hvort ég vaki eða sef,<br>
+                                þetta eitt sem þú gafst mér<br>
+                                það er alt sem ég hef.<br>
+                                <br>
+                                En í kvöld lýkur vetri<br>
+                                sérhvers vinnandi manns,<br>
+                                og á morgun skín maísól,<br>
+                                það er maísólin hans,<br>
+                                það er maísólin okkar,<br>
+                                okkar einíngarbands,<br>
+                                fyrir þér ber ég fána<br>
+                                þessa framtíðarlands.<br>
+
+
+                            </p>
+                        </div>
+                    </div>
+                    <br>
+                    <p>
+                        The first verse is quite subtle and sweet, the star has arrived to give him power.<br><br>
+                        The second verse moves into a dramatic description of the hard times going on both in Ólafurs
+                        life and society.<br><br>
+                        The last verse then brings with it the golden promise of something better. The little star in
+                        the first verse has grown to become a sun. Ofcourse all suns are stars, but when talking about
+                        „sun“ we are usually referring to our own sun. In that sense the impersonal and abstract star of
+                        hope has become more personalized and tangible in the last verse.
+                        <br><br>
+                        The last two lines when he talks about „fyrir þér ber ég fána, þessa framtíðalands“ are also
+                        interesting. In the demonstration Jóa is carrying this red flag upon the stage. Then, there
+                        bursts out a riot and in the midst of caos Ólafur offers to carry the flag for her. Jóa tells
+                        him no, not for me but for someone else. But in the poem ofcourse Ólafur gets to carry it.
+                        <br><br>
+                        In the end Maístjarnan is a poem about hope. Whether or not one wants to see it as political
+                        hope, the hope of new love or just something else.
+                        <br><br>
+                        For enthusiasts the poem should be roughly at this location:
+                        <br><br>
+                        Heimsljós - Hús skáldsins, chapter 15, page 121
+
+                        <br><br>
+                        Nanna Katrín Hannesdóttir
+                    </p>
+                    <hr>
+                    <p class="text-muted">
+                        References
+                        <br><br>
+                        [1] Heimsljós – Halldór Kiljan Laxness, heildarútgáfan sem kom út 1955
+                    </p>
                 </div>
             </div>
         </div>
