--- a/hafjollin.html
+++ b/hafjollin.html
@@ -51,6 +51,97 @@
                 <div class="jumbotron" style="margin-top: 20px">
                     <h1>Þar sem háfjöllin heilög rísa</h1>
                     <hr>
+                    <h2>Allar raddir</h2>
+                    <br>
+                    <h4>Laglína</h4>
+                    <br>
+                    <audio controls style="width: 100%" loop="loop">
+                        <source src="assets/hafjollin-tutti.mp3" type="audio/mpeg">
+                        Vafrinn þinn styður ekki HTML mp3.
+                    </audio>
+                    <br><br>
+                    <a href="assets/hafjollin-notur.pdf" target="_blank">
+                        <h4>Nótur ♬</h4>
+                    </a>
+                    <hr class="my-4">
+                    <h2>Einstaka raddir</h2>
+                    <br>
+                    <ul class="nav nav-tabs">
+
+                        <li class="nav-item">
+                            <a class="nav-link active show" data-toggle="tab" href="#sopran">Sópran</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link show" data-toggle="tab" href="#alt">Alt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link show" data-toggle="tab" href="#tenor">Tenór</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link show" data-toggle="tab" href="#bassi">Bassi</a>
+                        </li>
+                    </ul>
+                    <br>
+                    <div id="myTabContent" class="tab-content">
+                        <div class="tab-pane fade active show" id="sopran">
+                            <h4>Sópranröddin</h4>
+                            <br>
+                            <audio controls style="width: 100%" loop="loop">
+                                <source src="assets/hafjollin-sopran.mp3" type="audio/mpeg">
+                                Vafrinn þinn styður ekki HTML mp3.
+                            </audio>
+                        </div>
+                        <div class="tab-pane fade" id="alt">
+                            <h3>Altröddin</h3>
+                            <br>
+                            <audio controls style="width: 100%" loop="loop">
+                                <source src="assets/hafjollin-alto.mp3" type="audio/mpeg">
+                                Vafrinn þinn styður ekki HTML mp3.
+                            </audio>
+                        </div>
+                        <div class="tab-pane fade" id="tenor">
+                            <h3>Tenórröddin</h3>
+                            <br>
+                            <audio controls style="width: 100%" loop="loop">
+                                <source src="assets/hafjollin-tenor.mp3" type="audio/mpeg">
+                                Vafrinn þinn styður ekki HTML mp3.
+                            </audio>
+                        </div>
+                        <div class="tab-pane fade" id="bassi">
+                            <h3>Bassaröddin</h3>
+                            <br>
+                            <audio controls style="width: 100%" loop="loop">
+                                <source src="assets/hafjollin-bassi.mp3" type="audio/mpeg">
+                                Vafrinn þinn styður ekki HTML mp3.
+                            </audio>
+                        </div>
+                    </div>
+                    <hr>
+                    <h2>Texti lags</h2>
+                    <br>
+                    <p>
+                        Þar sem háfjöllin heilög rísa<br>
+                        mót heiðskírri norðurátt, <br>
+                        á landi íslenskra ísa, <br>
+                        þar er þér, sál mín, svo dátt; <br>
+                        <br>
+                        þar sem öræfafuglinn flögrar<br>
+                        í frosti um skarð og tind<br>
+                        og jökulauðnin þér ögrar<br>
+                        sem óklöppuð dýrlíngsmynd. <br>
+                        <br>
+                        þar sem Urðhæð og Einbúi vaka<br>
+                        og eldborgin hvíta rís<br>
+                        og fornir fjallgalar kvaka, <br>
+                        þar finn ég þig loks, mín dís! <br>
+                        <br>
+                        Á vörum þér sælan sefur; <br>
+                        af sjónum þér andvakan skín, <br>
+                        og mjúkt um þinn meydóm vefur<br>
+                        mjöllin sitt frostalín.<br>
+                        <br>
+                        Þórður Hallgrímsson / Halldór K. Laxness</p>
+                    <hr>
                     <h3>Greining á ljóðinu eftir Nönnu Katrínu Hannesdóttur</h3>
                     <br>
                     <p>
