--- a/hafjollin.html
+++ b/hafjollin.html
@@ -33,12 +33,17 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Maístjarnan</a>
+                                <a class="nav-link" href="./index.html">Lágnætti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./haettu.html">Hættu að gráta hringaná</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./maistjarnan.html">Maístjarnan</a>
                             </li>
                             <li class="nav-item active">
                                 <p class="nav-link" style="margin-bottom:0">Þar sem háfjöllin heilög rísa</p>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="./bradum.html">Bráðum kemur betri tíð</a>
                             </li>
@@ -224,13 +229,17 @@
                         <br><br>
                         Nanna Katrín Hannesdóttir
                     </p>
-<hr>
+                    <hr>
                     <p class="text-muted">
                         Heimildir sem ég notaðist við:
                         <br><br>
-                        [1] <a href="http://www.gljufrasteinn.is/is/halldor_laxness/vi_og_verk_halldors_kiljans_laxness/ritverk/vefarinn_mikli_fra_kasmir/" target="_blank">Síða Gljúfrasteins</a><br>
-                        [2] <a href="https://www.forlagid.is/vara/vefarinn-mikli-fra-kasmir/" target="_blank">Síða Forlagsins</a><br>
-                        [3] <a href="https://en.wikipedia.org/wiki/Vefarinn_mikli_fr%C3%A1_Kasm%C3%ADr" target="_blank">Wikipedia</a><br>
+                        [1] <a
+                            href="http://www.gljufrasteinn.is/is/halldor_laxness/vi_og_verk_halldors_kiljans_laxness/ritverk/vefarinn_mikli_fra_kasmir/"
+                            target="_blank">Síða Gljúfrasteins</a><br>
+                        [2] <a href="https://www.forlagid.is/vara/vefarinn-mikli-fra-kasmir/" target="_blank">Síða
+                            Forlagsins</a><br>
+                        [3] <a href="https://en.wikipedia.org/wiki/Vefarinn_mikli_fr%C3%A1_Kasm%C3%ADr"
+                            target="_blank">Wikipedia</a><br>
                         [4] Vefarinn mikli frá Kasmír, önnur útgáfa 1948, Helgafell
                         <br><br>
 
