--- a/haettu.html
+++ b/haettu.html
@@ -33,11 +33,11 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <p class="nav-link" style="margin-bottom:0">Lágnætti</p>
-                                </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./haettu.html">Hættu að gráta hringaná</a>
+                                    <a class="nav-link" href="./index.html">Lágnætti</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <p class="nav-link" style="margin-bottom:0">Hættu að gráta hringaná</p>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./maistjarnan.html">Maístjarnan</a>
@@ -56,8 +56,17 @@
                     </div>
                 </nav>
                 <div class="jumbotron" style="margin-top: 20px">
-                    <h1>Lágnætti</h1>
+                    <h1>Hættu að gráta hringaná</h1>
                     <hr>
+                    <h2>Allar raddir</h2>
+                    <br>
+                    <h4>Laglína</h4>
+                    <br>
+                    <audio controls style="width: 100%" loop="loop">
+                        <source src="assets/haettu-tutti.mp3" type="audio/mpeg">
+                        Vafrinn þinn styður ekki HTML mp3.
+                    </audio>
+                    <hr class="my-4">
                     <h2>Einstaka raddir</h2>
                     <br>
                     <ul class="nav nav-tabs">
@@ -78,10 +87,10 @@
                     <br>
                     <div id="myTabContent" class="tab-content">
                         <div class="tab-pane fade active show" id="sopran">
-                            <h3>Sópranröddin</h3>
+                            <h4>Sópranröddin</h4>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/lagnaetti-sopran.mp3" type="audio/mpeg">
+                                <source src="assets/haettu-sopran.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -89,7 +98,7 @@
                             <h3>Altröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/lagnaetti-alto.mp3" type="audio/mpeg">
+                                <source src="assets/haettu-alto.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -97,7 +106,7 @@
                             <h3>Tenórröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/lagnaetti-tenor.mp3" type="audio/mpeg">
+                                <source src="assets/haettu-tenor.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -105,11 +114,30 @@
                             <h3>Bassaröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/lagnaetti-bassi.mp3" type="audio/mpeg">
+                                <source src="assets/haettu-bassi.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
                     </div>
+                    <hr>
+                    <h2>Texti lags</h2>
+                    <br>
+                    <p>Hættu’ að gráta hringaná,<br>
+                        heyrðu ræðu mína.<br>
+                        Ég skal gefa þér gull í tá<br>
+                        þó Grímur taki þína.<br>
+                        <br>
+                        Hættu’ að gráta hringaná,<br>
+                        huggun er það meiri.<br>
+                        Ég skal gefa þér gull í tá<br>
+                        þó Grímur taki fleiri.<br>
+                        <br>
+                        Hættu’að gráta hringaná,<br>
+                        huggun má það kalla.<br>
+                        Ég skal gefa þér gull í tá<br>
+                        þó Grímur taki þær allar.<br>
+                        <br>
+                        íslenskt þjóðlag / Jónas Hallgrímsson</p>
                 </div>
             </div>
         </div>
