--- a/hvertspor.html
+++ b/hvertspor.html
@@ -33,7 +33,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Maístjarnan</a>
+                                <a class="nav-link" href="./index.html">Lágnætti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./haettu.html">Hættu að gráta hringaná</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./maistjarnan.html">Maístjarnan</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./hafjollin.html">Þar sem háfjöllin heilög rísa</a>
