--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+    </script>
     <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <title>deKÓR 2019</title>
 </head>
@@ -58,6 +58,19 @@
                 <div class="jumbotron" style="margin-top: 20px">
                     <h1>Lágnætti</h1>
                     <hr>
+                    <h2>Allar raddir</h2>
+                    <br>
+                    <h4>Laglína</h4>
+                    <br>
+                    <audio controls style="width: 100%" loop="loop">
+                        <source src="assets/lagnaetti-tutti.mp3" type="audio/mpeg">
+                        Vafrinn þinn styður ekki HTML mp3.
+                    </audio>
+                    <br><br>
+                    <a href="assets/lagnaetti-notur.pdf" target="_blank">
+                        <h4>Nótur ♬</h4>
+                    </a>
+                    <hr class="my-4">
                     <h2>Einstaka raddir</h2>
                     <br>
                     <ul class="nav nav-tabs">
@@ -109,6 +122,33 @@
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
+                        <hr>
+                        <h2>Texti lags</h2>
+                        <br>
+                        <p>Margoft þangað mörk og grund<br>
+                            mig að fangi draga,<br>
+                            sem þær anga út’við Sund<br>
+                            eftir langa daga.<br>
+                            <br>
+                            Ekki er nóttin leið né löng:<br>
+                            landið rótt þar bíður,<br>
+                            meðan hljótt að sævarsöng<br>
+                            sól um óttu ríður.<br>
+                            <br>
+                            Ægisdætur hafsbrún hjá<br>
+                            hárið væta langa,<br>
+                            sem hún lætur liðast frá<br>
+                            ljósrar nætur vanga.<br>
+                            <br>
+                            Ekki er margt sem foldar frið<br>
+                            fegur skarta lætur,<br>
+                            eða hjartað unir við<br>
+                            eins og bjartar nætur.<br>
+                            <br>
+                            <i>Tvær íslenskar stemmur</i><br>
+                            Úts. Gunnar Haraldsson<br>
+                            Ljóð Þorsteinn Erlingsson<br>
+                        </p>
                     </div>
                 </div>
             </div>
