--- a/haettu.html
+++ b/haettu.html
@@ -66,6 +66,16 @@
                         <source src="assets/haettu-tutti.mp3" type="audio/mpeg">
                         Vafrinn þinn styður ekki HTML mp3.
                     </audio>
+                    <br><br>
+                    <a href="assets/haettu-notur.pdf" target="_blank">
+                        <h4>Nótur ♬</h4>
+                    </a>
+                    <a href="assets/grimurgraedari.pdf" target="_blank">
+                        <h4>Grein um Grím græðara 📝</h4>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=ju-brdoI5VM" target="_blank">
+                        <h4>Upptaka Hamrahlíðakórsins 📹</h4>
+                    </a>
                     <hr class="my-4">
                     <h2>Einstaka raddir</h2>
                     <br>
@@ -87,7 +97,7 @@
                     <br>
                     <div id="myTabContent" class="tab-content">
                         <div class="tab-pane fade active show" id="sopran">
-                            <h4>Sópranröddin</h4>
+                            <h3>Sópranröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
                                 <source src="assets/haettu-sopran.mp3" type="audio/mpeg">
