--- a/gladur.html
+++ b/gladur.html
@@ -36,11 +36,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="./index.html">Lágnætti</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./gladur.html">Nú er ég glaður</a>
+                                <li class="nav-item  active">
+                                    <p class="nav-link" style="margin-bottom:0">Nú er ég glaður</p>
                                 </li>
-                                <li class="nav-item active">
-                                    <p class="nav-link" style="margin-bottom:0">Hættu að gráta hringaná</p>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./haettu.html">Hættu að gráta hringaná</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./maistjarnan.html">Maístjarnan</a>
@@ -59,25 +59,19 @@
                     </div>
                 </nav>
                 <div class="jumbotron" style="margin-top: 20px">
-                    <h1>Hættu að gráta hringaná</h1>
+                    <h1>Nú er ég glaður á góðri stund</h1>
                     <hr>
                     <h2>Allar raddir</h2>
                     <br>
                     <h4>Laglína</h4>
                     <br>
                     <audio controls style="width: 100%" loop="loop">
-                        <source src="assets/haettu-tutti.mp3" type="audio/mpeg">
+                        <source src="assets/gladur-tutti.mp3" type="audio/mpeg">
                         Vafrinn þinn styður ekki HTML mp3.
                     </audio>
                     <br><br>
-                    <a href="assets/haettu-notur.pdf" target="_blank">
+                    <a href="assets/gladur-notur.pdf" target="_blank">
                         <h4>Nótur ♬</h4>
-                    </a>
-                    <a href="assets/grimurgraedari.pdf" target="_blank">
-                        <h4>Grein um Grím græðara 📝</h4>
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=ju-brdoI5VM" target="_blank">
-                        <h4>Upptaka Hamrahlíðakórsins 📹</h4>
                     </a>
                     <hr class="my-4">
                     <h2>Einstaka raddir</h2>
@@ -103,7 +97,7 @@
                             <h3>Sópranröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/haettu-sopran.mp3" type="audio/mpeg">
+                                <source src="assets/gladur-sopran.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -111,7 +105,7 @@
                             <h3>Altröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/haettu-alto.mp3" type="audio/mpeg">
+                                <source src="assets/gladur-alto.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -119,7 +113,7 @@
                             <h3>Tenórröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/haettu-tenor.mp3" type="audio/mpeg">
+                                <source src="assets/gladur-tenor.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
@@ -127,30 +121,42 @@
                             <h3>Bassaröddin</h3>
                             <br>
                             <audio controls style="width: 100%" loop="loop">
-                                <source src="assets/haettu-bassi.mp3" type="audio/mpeg">
+                                <source src="assets/gladur-bassi.mp3" type="audio/mpeg">
                                 Vafrinn þinn styður ekki HTML mp3.
                             </audio>
                         </div>
+                        <hr>
+                        <h2>Texti lags</h2>
+                        <br>
+                        <p>Nú er ég glaður á góðri stund,<br>
+                                sem á mér sér;<br>
+                                guði sé lof fyrir þennan fund<br>
+                                og vel sé þeim sem veitti mér.<br>
+                                <br>
+                                Vitjað hef ég vina mót,<br>
+                                sem nú á sér;<br>
+                                reynt af mörgum hýrleg hót;<br>
+                                vel sé þeim, sem veitti mér.<br>
+                                <br>
+                                Yndi er að sitja öls við pel<br>
+                                og gamna sér;<br>
+                                en fallegt er að fara vel,<br>
+                                þó ör sé sá sem á skenkir.<br>
+                                <br>
+                                Gott er að hafa góðan sið,<br>
+                                sem betur fer,<br>
+                                aldrei skartar óhófið,<br>
+                                og er sá sæll sem gáir að sér.<br>
+                                <br>
+                                Gott er að hætta hverjum leik,<br>
+                                þá hæst fram fer.<br>
+                                Nú skal hafa sig á kreik;<br>
+                                vel sé þeim, sem veitti mér.<br>
+                            <br>
+                            <i>Texti: Hallgrímur Pétursson</i><br>
+                            <i>Raddsetning: Gunnar Reynir Sveinsson</i>
+                        </p>
                     </div>
-                    <hr>
-                    <h2>Texti lags</h2>
-                    <br>
-                    <p>Hættu’ að gráta hringaná,<br>
-                        heyrðu ræðu mína.<br>
-                        Ég skal gefa þér gull í tá<br>
-                        þó Grímur taki þína.<br>
-                        <br>
-                        Hættu’ að gráta hringaná,<br>
-                        huggun er það meiri.<br>
-                        Ég skal gefa þér gull í tá<br>
-                        þó Grímur taki fleiri.<br>
-                        <br>
-                        Hættu’að gráta hringaná,<br>
-                        huggun má það kalla.<br>
-                        Ég skal gefa þér gull í tá<br>
-                        þó Grímur taki þær allar.<br>
-                        <br>
-                        íslenskt þjóðlag / Jónas Hallgrímsson</p>
                 </div>
             </div>
         </div>
