--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                                     <p class="nav-link" style="margin-bottom:0">Lágnætti</p>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="./gladur.html">Nú er ég glaður</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="./haettu.html">Hættu að gráta hringaná</a>
                                 </li>
                                 <li class="nav-item">
